style.css
/* Setup page size */

body {
  width: 8.5in;
  height: 11in;
  padding: 0.5em;
  padding-top: 0.1em;
  padding-bottom: 0.1em;
  font-family: "Times New Roman", serif;
  margin: auto;
}

@media print {
  .pagebreak {
      clear: both;
      page-break-after: always;
  }

  .noprint {
    display: none;
  }
}

@media not print {
  .printonly {
    display: none;
  }
}

.pagebreak {
    clear: both;
    page-break-after: always;
}

.noprint > a {
  text-decoration: underline;
  color: blue;
}

.noprint > a:hover {
  color: purple;
}

/* Clear default styling */
h1,h2,h3 {
  margin: 0;
}

ul {
  margin: 0;
}

a {
  color: inherit;
  text-decoration: inherit;
}

a:hover {
  color: blue;
}

/* Define styles for entries */

.header {
  font-family: ubuntu, sans-serif
}

.subheader {
  margin-top: -1em;
  margin-bottom: -0.5em;
  margin-left: 0.75em;
}

.subheader > a {
  font-family: mono;
}

hr {
  height: 0.15em;
  color: black;
  background: black;
  border: none;
}

.section > h2 {
  font-size: 18px;
  padding-bottom: 0.15em;
  font-family: ubuntu, sans-serif
}

.entry {
  clear: both;
  padding-bottom: 0.45em;
}

.title {
  float: left;
  font-size: 14px;
}

.duration {
  float: right;
  font-size: 14px;
}

.company {
  clear: both;
  font-style: italic;
  font-size: 15px;
  padding-bottom: 0.5em;
}

.info {
  font-size: 13px;
}

li > ul {
  margin-left: 0;
  padding-left: 2em;
  list-style-type: disc;
}

.info > ul > li {
  padding-bottom: 0.25em;
}

